Refactor chat session handling to include Course Module ID (cmid) in API calls and cache key

--- a/templates/tutor_ia_drawer.mustache
+++ b/templates/tutor_ia_drawer.mustache
@@ -22,6 +22,7 @@
     Context variables required for this template:
     * uniqid - Unique identifier
     * courseid - ID del curso
+    * cmid - ID del módulo del curso (0 si solo está en el curso)
     * userid - ID del usuario
     * userrole - Rol del usuario (Profesor/Estudiante)
     * avatarurl - URL del avatar seleccionado
@@ -31,6 +32,7 @@
     {
         "uniqid": "tia_123456",
         "courseid": 2,
+        "cmid": 15,
         "userid": 5,
         "userrole": "Estudiante",
         "avatarurl": "/local/dttutor/pix/avatars/avatar_profesor_01.png",
@@ -51,7 +53,7 @@
             <span class="sr-only">{{#str}}close, local_dttutor{{/str}}</span>
         </button>
     </div>
-    <div class="tutor-ia-drawer-body" id="tutor-ia-drawer-content-{{uniqid}}" data-courseid="{{courseid}}" data-userid="{{userid}}">
+    <div class="tutor-ia-drawer-body" id="tutor-ia-drawer-content-{{uniqid}}" data-courseid="{{courseid}}" data-cmid="{{cmid}}" data-userid="{{userid}}">
         <h2 class="sr-only">{{#str}}pluginname, local_dttutor{{/str}}</h2>
 
         {{! Contenedor de mensajes }}
@@ -82,7 +84,7 @@
 require(['local_dttutor/tutor_ia_chat'], function(TutorIAChat) {
     var root = document.getElementById('tutor-ia-drawer-content-{{uniqid}}');
     if (root) {
-        TutorIAChat.init(root, '{{uniqid}}', {{courseid}}, {{userid}});
+        TutorIAChat.init(root, '{{uniqid}}', {{courseid}}, {{cmid}}, {{userid}});
     }
 });
 {{/js}}
