--- a/templates/tutor_ia_toggle.mustache
+++ b/templates/tutor_ia_toggle.mustache
@@ -36,7 +36,7 @@
 <button
     id="tutor-ia-toggle-{{uniqid}}"
     class="tutor-ia-toggle-button tutor-ia-position-{{position}}"
-    aria-controls="tutor-ia-drawer-{{uniqid}}"
+    aria-expanded="false"
     type="button"
     data-action="tutor-ia-toggle"
     data-position="{{position}}"
