--- a/templates/admin_position_preview.mustache
+++ b/templates/admin_position_preview.mustache
@@ -39,6 +39,34 @@
     * str_reference_edge_y - Localized string
     * str_preview - Localized string
     * custom_active - Boolean, true if custom preset is selected
+
+    Example context (json):
+    {
+        "presets": [
+            {"value": "right", "label": "Right corner", "selected": true},
+            {"value": "left", "label": "Left corner", "selected": false}
+        ],
+        "drawerside_options": [
+            {"value": "right", "label": "Open from right", "selected": true}
+        ],
+        "xref_options": [{"value": "left", "label": "Left", "selected": true}],
+        "yref_options": [{"value": "bottom", "label": "Bottom", "selected": true}],
+        "xvalue": "2rem",
+        "yvalue": "6rem",
+        "avatarurl": "https://example.com/avatar.png",
+        "hiddenvalue": "{\"preset\":\"right\"}",
+        "str_position_preset": "Preset position",
+        "str_drawer_side": "Drawer side",
+        "str_drawer_side_help": "Choose side",
+        "str_position_x": "X Position",
+        "str_position_y": "Y Position",
+        "str_position_x_help": "Distance from edge",
+        "str_position_y_help": "Distance from edge",
+        "str_reference_edge_x": "Horizontal reference",
+        "str_reference_edge_y": "Vertical reference",
+        "str_preview": "Preview",
+        "custom_active": false
+    }
 }}
 <div class="position-configurator">
     <div class="position-controls">
